<resources>
    <string name="app_name">NextGen</string>
    <string name="logo_description">NextGen Online Exam System Logo</string>
    <string name="app_short_name">NGX</string>
    <string name="system_title">NextGen Online\nExam System</string>
    <string name="label_username">Username</string>
    <string name="hint_username">Enter your username</string>
    <string name="label_password">Password</string>
    <string name="hint_password">Enter your password</string>
    <string name="button_login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="button_create_account">Create Account</string>
    <string name="create_account_title">Create a New\nAccount</string>
    <string name="hint_new_username">Enter a username</string>
    <string name="hint_new_password">Enter a password</string>
    <string name="button_createaccount">CreateAccount</string>
    <string name="button_back_to_login">Already have an account? Login here.</string>
    <string name="nextgen_logo_description">NextGen Exam System Logo</string>
    <string name="welcome_message">Welcome to NextGen</string>
    <string name="announcements_title">Announcements</string>
    <string name="announcements_content">This is where important announcements will be displayed.</string>
    <string name="menu_view_results">View Results</string>
    <string name="menu_view_profile">View Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_image_desc">User profile image</string>
    <string name="prompt_question_type">Question Type</string>
    <string name="select_course">Select Course</string>
    <string name="nav_header_desc">Navigation header image</string>
    <string name="score_format">Score: %1$d / %2$d</string>
    <string name="email_icon">Email Icon</string>
    <string name="course">Course</string>
    <string name="section">Section</string>

    <string name="mark_attendance_title">Mark Attendance</string>
    <string name="select_section_prompt">Select a section</string>
    <string name="section_spinner_desc">Choose a class section</string>
    <string name="empty_no_sections_or_students">No sections assigned or no students found.</string>
    <string name="submit_attendance">Submit Attendance</string>
    <string name="loading_message">Loading…</string>
    <string name="viewreport">View Report</string>
    <string name="history_meta_cd" />
    <string name="history_status_cd" />
    <string name="history_date_cd" />
    <string name="day_records_list_cd" />
    <string name="selected_date_cd" />
    <string name="calendar_view_cd" />
    <string name="history_student_name_cd" />


    <string name="toolbar">Main Toolbar</string>
    <string name="search_icon">Search icon</string>
    <string name="filter">Filter button</string>
    <string name="examinee_icon">Examinee count icon</string>
    <string name="tc_icon">Test Coordinator count icon</string>
    <string name="curriculum_icon">Curriculum count icon</string>
    <string name="exams_icon">Total Exams count icon</string>
    <string name="tap_to_select">Tap to Select\n</string>
    <string name="student_avatar">Student Avatar\n</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="excused">Excused</string>
    <string name="late">Late</string>
    <string-array name="main_term_options">
        <item>1st Term</item>
        <item>2nd Term</item>
        <item>3rd Term</item>
    </string-array>



    <string-array name="sub_term_options">
    <item>Prelim</item>
    <item>Midterm</item>
    <item>Finals</item>
    </string-array>


</resources>